# ContactInfo

./: CMakeLists.txt  lcmt_hydroelastic_contact_surface_tri_for_viz.hpp  lcmt_hydroelastic_quadrature_per_point_data_for_viz.hpp  main.cpp
lcm_f/: lcmt_contact_results_for_viz.hpp  lcmt_contact_results_for_viz.lcm  lcmt_hydroelastic_contact_surface_for_viz.hpp  lcmt_hydroelastic_contact_surface_for_viz.lcm  lcmt_hydroelastic_contact_surface_tri_for_viz.lcm  lcmt_hydroelastic_quadrature_per_point_data_for_viz.lcm  lcmt_point_pair_contact_info_for_viz.hpp  lcmt_point_pair_contact_info_for_viz.lcm
lcm_f/drake/: lcmt_hydroelastic_contact_surface_for_viz.hpp
